STAGE-15 ADD tabSizeProperty